# STLViewer

./: CMakeLists.txt  README.md
STLViewer/: CMakeLists.txt  Mesh.cpp  Mesh.h  MeshOperations.cpp  MeshOperations.h  MeshRenderer.cpp  MeshRenderer.h  STLLoader.cpp  STLLoader.h  STLViewer.cpp  STLViewer.h
STLViewer/Resources/: Cube.stl  Square.stl
STLViewer/Shaders/: mesh.frag.glsl
Shaders/: mesh.vert.glsl
ThirdPartyLibraries/GLAD/include/glad/: glad.h
ThirdPartyLibraries/GLAD/src/: glad.c
